Documentação com o swagger implementada
